# markterm-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: sample.md
markterm/: Cargo.toml
markterm-cli/: Cargo.toml
markterm-cli/src/: main.rs
markterm/benches/: benchmark.rs
markterm/src/: lib.rs  themes.rs  writer.rs
markterm/src/themes/: color.rs
src/: lib.rs  parser.rs  themes.rs  writer.rs
src/themes/: color.rs
