[package]
name = "markterm"
version = "0.1.0"
edition = "2021"

[dependencies]
markdown = { version = "1.0.0-alpha.17", features = ["serde"] }
serde_json = "1.0.117"

[dev-dependencies]
colored = "2.1.0"
criterion = {version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false
